Added Profile Picture

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Main Page Header Section-->
 
 <h1>BOODHOO SHASHIRAJ</h1>
-<img src="https://github.com/prav1807/prav1807.github.io/blob/main/Profile%20Picture%20(2).jpg" alt="Profile Picture">
+<img src="C:\Users\ASPIRE E5-I5-41T-3YX\Desktop\documents\Web Development\Portfolio\Resume\Profile Picture.jpg" alt="Profile Picture">
 <h4>Automation Quality Engineer<br>
     Badamier Road, Calebasses, Pamplemousses<br>
     (+230) 5809 6169<br>
