--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <h1>BOODHOO SHASHIRAJ</h1>
 
 <!-- Profile Picutre -->
-<img src="../Resume/profilePicture.jpg" alt="Profile Picture">
+<div class="propicture">
+    <img src="../Resume/profilePicture.jpg" alt="Profile Picture" id="profilepic">
+</div>
 
 <strong>Automation Quality Engineer<br>
     Badamier Road, Calebasses, Pamplemousses<br>
@@ -26,6 +28,7 @@
 <!-- Professional Section - 1st part of CV-->
 
 <h3>Professional Summary</h3>
+<hr>
 
 <p> A skilled and adaptable Automation Quality Engineer with experience in Manual, Automation Testing, with Selenium WebDriver, Playwright, Cypress, and API Testing. 
     Good at picking up new programming languages and tools. A quick learner with good analytical skills, which enables me to provide effective solutions. 
@@ -36,8 +39,9 @@
 
 <!-- Professional Section - 1st part of CV-->
 <h3>Professional Experience</h3>
+<hr>
 
-<table>
+<table id="automation">
     <tr>
         <td><b>Junior Automation Quality Engineer </b></td>
         <td><b>March 2023 - Present</b></td>
@@ -60,7 +64,7 @@
     <li>Test software in an Agile Environment</li>
 </ul>
 
-<table>
+<table id="portfireman">
     <tr>
         <td><b>Port Fireman<b></td>
         <td><b>March 2020 – February 2023</b></td>
@@ -77,8 +81,9 @@
 
 <!-- Educational Section - 2nd part of CV-->
 <h3>Education</h3>
+<hr>
 
-<table>
+<table id="education">
     <tr>
         <td><b>University of Mauritius <b></td>
         <td><b>Reduit, Mauritius </b></td>
@@ -113,6 +118,7 @@
 
 <!-- Skills Section - 3rd part of CV-->
 <h3>Professional Skills</h3>
+<hr>
 
 <table> 
     <tr>
@@ -147,35 +153,45 @@
 
 <!-- Projects Section - last part of CV-->
 <h3>Projects</h3>
+<hr>
 
-<b> Skills Management System </b>
-<ul> 
-    <li>Attend daily Stand-Up meetings</li>
-    <li>Attend grooming session to discuss User Stories and Acceptance Criteria</li>
-    <li>Write manual test cases on Azure DevOps and automated test script using Selenium WebDriver</li>
-    <li>Collaborate with team members for project deployment and improvements</li>
-    <li>Perform regression testing both manually and using automated scripts</li>
-    <li></li>Test software in an Agile Environment</Ul>
+<ol>
+    <li><b> Skills Management System </b></li>
+        <ul> 
+        <li>Attend daily Stand-Up meetings</li>
+        <li>Attend grooming session to discuss User Stories and Acceptance Criteria</li>
+        <li>Write manual test cases on Azure DevOps and automated test script using Selenium WebDriver</li>
+        <li>Collaborate with team members for project deployment and improvements</li>
+        <li>Perform regression testing both manually and using automated scripts</li>
+        <li>Test software in an Agile Environment</li>
+        </ul>
 
-<b>Grocery Inventory System</b>
-<ul> 
-    <li>Attend daily Stand-Up meetings</li>
-    <li>Attend grooming session to discuss User Stories and Acceptance Criteria</li>
-    <li>Write manual test cases on Azure DevOps and automated test script using Selenium WebDriver</li>
-    <li>Collaborate with team members for project deployment and improvements</li>
-    <li>Perform regression testing both manually and using automated scripts</li> 
-    <li>Test software in an Agile Environment</li>
-</ul>
+    <li><b>Grocery Inventory System</b></li>
+        <ul> 
+        <li>Attend daily Stand-Up meetings</li>
+        <li>Attend grooming session to discuss User Stories and Acceptance Criteria</li>
+        <li>Write manual test cases on Azure DevOps and automated test script using Selenium WebDriver</li>
+        <li>Collaborate with team members for project deployment and improvements</li>
+        <li>Perform regression testing both manually and using automated scripts</li> 
+        <li>Test software in an Agile Environment</li>
+        </ul>
 
-<b>Flight Booking System</b>
-<ul> 
-    <li>Attend daily Stand-Up meetings</li>
-    <li>Attend grooming sessions to discuss different User Stories and Acceptance Criteria</li>
-    <li>Write manual test cases on Azure DevOps</li>
-    <li>Write automated test scripts using Selenium WebDriver and Playwright framework</li>
-    <li>Perform regression testing</li>
-    <li>Perform testing in an Agile Environment</li>
-</ul>
+    <li><b>Flight Booking System</b></li>
+        <ul> 
+        <li>Attend daily Stand-Up meetings</li>
+        <li>Attend grooming sessions to discuss different User Stories and Acceptance Criteria</li>
+        <li>Write manual test cases on Azure DevOps</li>
+        <li>Write automated test scripts using Selenium WebDriver and Playwright framework</li>
+        <li>Perform regression testing</li>
+        <li>Perform testing in an Agile Environment</li>
+        </ul>
+</ol>
+
+<div id="download">
+    <button id="button1">
+        <img src="../Resume/download.png" id="saveCV">
+    </button>
+</div>
 
 
 </body>
